Collect-TV-20180201/src/objects/TNET_Banner_Heading__c.object
<CustomObject>
    <fields>
        <fullName>TNET_Banner_Title__c</fullName>
        <label>Banner Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TNET_Carousel_Image__c</fullName>
        <label>Carousel Image</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TNET_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TNET_Heading_For_Banner__c</fullName>
        <label>Heading For Banner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TNET_Image_URL__c</fullName>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>TNET_Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TNET_Order__c</fullName>
        <label>Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TNET_Title__c</fullName>
        <label>Page Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TNET_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>TNET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TNET Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virtual Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TNET Tiles</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TNET_URL__c</fullName>
        <label>URL</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TNET_Video_URL__c</fullName>
        <label>Video URL</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <label>TNET Banner Heading</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TNET_Title__c</columns>
        <columns>TNET_Banner_Title__c</columns>
        <columns>TNET_URL__c</columns>
        <columns>TNET_Description__c</columns>
        <columns>TNET_Image_URL__c</columns>
        <columns>TNET_Video_URL__c</columns>
        <columns>TNET_Order__c</columns>
        <columns>TNET_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TNET_Pages</fullName>
        <columns>NAME</columns>
        <columns>TNET_Title__c</columns>
        <columns>TNET_Banner_Title__c</columns>
        <columns>TNET_Type__c</columns>
        <columns>TNET_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TNET_Type__c</field>
            <operation>equals</operation>
            <value>TNET Page</value>
        </filters>
        <label>TNET Pages</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>BH-{0000}</displayFormat>
        <label>Banner Heading Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>